--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "fetch": "github:github/fetch@^0.10.1",
       "font-awesome": "npm:font-awesome@^4.5.0",
+      "moment": "npm:moment@^2.11.1",
+      "numeral": "npm:numeral@^1.5.3",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
     "devDependencies": {
